--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 
 <a href="./public/movie-ranking.html">Movie Ranking Project</a>
 
-<img src="../4.3 HTML Porfolio Project/assets/movies web.JPG" alt="movie ranking"/>
+<img src="../assets/movies web.JPG" alt="movie ranking"/>
 
 <a href="./public/birthday-invite.html">Birthday Invite</a>
 
-<img src="../4.3 HTML Porfolio Project/assets/images/birthday.png" alt="Birthday"/>
+<img src="../assets/images/birthday.png" alt="Birthday"/>
 
 <a href="./public/about.html" >About me </a>
 <a href="./public/contact.html" >Contact</a>
